# phantomx_arm

./: README.md  ROS Notes  boyd_map.yaml  motion_planner.cpp  moveit_auto_nav.pgm  my_map.pgm  my_map.yaml  my_map_TES.pgm  my_map_TES.yaml  readme  readme~  ros codes  urdf_Tutorials - ROS Wiki.html
phantomx_arm_controller/: CMakeLists.txt  package.xml
phantomx_arm_description/: CMakeLists.txt  package.xml
phantomx_arm_gazebo/: CMakeLists.txt  package.xml
phantomx_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phantomx_arm_turtlebot_description/: CMakeLists.txt  collaborative_navigation.rviz  package.xml  presentation.rviz  turtlebot_navigation.rviz
phantomx_arm_turtlebot_ikfast_plugin/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  phantomx_arm_turtlebot_moveit_ikfast_plugin_description.xml
phantomx_arm_turtlebot_moveit_config/: .setup_assistant  CMakeLists.txt  CMakeLists.txt~  motion_planner.cpp  package.xml  package.xml~
phantomx_arm_turtlebot_moveit_config/config/: arm_controller.yaml  arm_controller.yaml~  controllers.yaml  controllers.yaml~  fake_controllers.yaml  gazebo_arm_controller.yaml  joint_limits.yaml  kinematics.yaml  multi_arm_controller.yaml  ompl_planning.yaml~  turtlebot.srdf  turtlebot.srdf~
phantomx_arm_turtlebot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  frames.gv  gazeboArmController.launch  gazeboArmController.launch~  gazeboMultiArmController.launch  gazeboMultiArmController.launch~  gazeboMultiPhantomX.launch  gazeboPhantomX.launch  gazeboPhantomX.launch~  kinematicSolver.launch  kinematicSolver.launch~  motion_planner_test.launch  motion_planner_test.launch~  move_group.launch  move_group.launch~  moveit.rviz  moveit_planning_execution.launch  moveit_planning_execution.launch~  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  pickANDplace.launch  planning_context.launch  planning_pipeline.launch.xml  robots.launch  robots.launch~  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  test.launch  trajectory_execution.launch.xml  turtlebot_moveit_controller_manager.launch.xml  turtlebot_moveit_controller_manager.launch.xml~  twoRobotGazebo.launch  twoRobotGazebo.launch~  two_robots_simulation.launch~  warehouse.launch
phantomx_arm_turtlebot_moveit_config/launch/tf_Launch/: test.launch
phantomx_arm_turtlebot_moveit_config/src/: asdf  checkPlanner_1  checkPlanner_2~  kinematicSolver.cpp  motionPlan.cpp  motion_planner.cpp  one_robot.launch  robots.launch  two_robots_simulation.launch  two_robots_simulation.launch~
phantomx_arm_turtlebot_moveit_config/src/Gazebo_Plugins/: gazebo_ros_phantomx_grasp_hack.cc
phantomx_arm_turtlebot_moveit_config/src/PicknPlace/nodes/: jointStateSubscriber.cpp  jointStateSubscriber.h  pickANDplace.cpp  pickANDplace.h
phantomx_arm_turtlebot_moveit_config/src/PicknPlace/tasks/: pickANDplace_trial.cpp
phantomx_arm_turtlebot_pick_and_place/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+106 files in other folders)
